# TsingYun_Tutorial_Vision-Aiming

.github/: PULL_REQUEST_TEMPLATE.md
simulator_client/: kalman_tracker_bindings.py  pipeline.py
tasks/task1-aruco/src/: aruco_render.py  calibrate.py
tasks/task2-detector/src/: detector.py  model.py  train.py
tasks/task3-tracker/: CMakeLists.txt
tasks/task3-tracker/src/: kalman_tracker.cpp
